# pampanginator

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Makefile  OLLAMA_SETUP.md  README.md  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  prompt.md  tailwind.config.ts  vite.config.ts
app/: CLAUDE.md  Dockerfile  Dockerfile.dev  Dockerfile.test  Makefile  docker-compose.dev.yml  docker-compose.yml  logging_setup.py  main.py  metrics.py  middleware.py  (+2 more)
libs/kapampangan_obs/: pyproject.toml
libs/kapampangan_obs/kapampangan_obs/: __init__.py  middleware.py
mcp-vocabulary/api/_generated/: .openapi-generator-ignore  .spec-hash  README.md  docker-compose.yaml  openapi.yaml  setup.cfg
mcp-vocabulary/api/_generated/.openapi-generator/: FILES
mcp-vocabulary/api/_generated/impl/: admin.py  lookup.py  status.py  vocabulary.py
mcp-vocabulary/api/_generated/mcp_vocabulary_api/: main.py  security_api.py
mcp-vocabulary/api/_generated/mcp_vocabulary_api/apis/: admin_api.py  admin_api_base.py  lookup_api.py  lookup_api_base.py  status_api.py  status_api_base.py  vocabulary_api.py  vocabulary_api_base.py
mcp-vocabulary/api/_generated/mcp_vocabulary_api/models/: add_vocabulary_request.py  admin_export_response.py  admin_stats_response.py  lookup_request.py  lookup_response.py  reseed_response.py  status_response.py  vocabulary_entry.py  vocabulary_search_response.py  vocabulary_search_result.py
mcp-vocabulary/api/_generated/tests/: conftest.py  test_admin_api.py  test_lookup_api.py  test_status_api.py  test_vocabulary_api.py
(+184 files in other folders)
