[metadata]
name = mcp_vocabulary_api
version = 0.2.0
description = Vocabulary lookup service for the Kapampangan language tutor. Uses pgvector cosine similarity search against a PostgreSQL vocabulary table populated from canonical data files.  Called by the orchestration layer&#39;s agentic tool loop. Can also be queried directly here for manual testing. 
long_description = file: README.md
keywords = OpenAPI Kapampangan Vocabulary MCP
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =.
packages = find_namespace:

[options.packages.find]
where = .
